--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "npx jest",
     "test:watch": "npx jest --watch",
     "test:coverage": "npx jest --coverage",
+    "prerelease": "npm run build",
     "release": "np"
   },
   "husky": {
