--- a/package.json
+++ b/package.json
@@ -14,57 +14,45 @@
     "type": "git",
     "url": "https://github.com/ilaborie/plop-logger"
   },
+  "main": "dist/index.js",
+  "module": "dist/plop-logger.esm.js",
+  "typings": "dist/index.d.ts",
   "files": [
-    "lib/**/*"
+    "dist"
   ],
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "typings": "lib/index.d.ts",
   "scripts": {
     "clean": "npx rimraf lib/",
     "prebuild": "npm run clean",
-    "build": "npx tsc --declaration",
-    "postbuild": "npx rimraf lib/**/*.test.*",
-    "prelint-staged": "npm run build",
-    "test": "npx jest",
-    "test:watch": "npx jest --watch",
-    "test:coverage": "npx jest --coverage",
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test",
+    "lint": "tsdx lint",
     "prerelease": "npm run build",
     "release": "np"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "tsdx lint"
     }
   },
-  "lint-staged": {
-    "*.{ts,js,css,json,md}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.{ts,js}": [
-      "eslint --fix src/**/*.ts",
-      "git add"
-    ]
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
   },
   "dependencies": {
-    "ansi-colors": "^4.1.1",
-    "gitmoji-cli": "^2.0.0",
-    "tslib": "^1.10.0"
+    "ansi-colors": "^4.1.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
-    "@typescript-eslint/parser": "^2.3.3",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
+    "gitmoji-cli": "^2.0.0",
     "husky": "^3.0.8",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.4.2",
-    "prettier": "^1.18.2",
+    "np": "^5.1.1",
     "rimraf": "^3.0.0",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.6.4"
+    "tsdx": "^0.9.3",
+    "tslib": "^1.10.0",
+    "typescript": "^3.5.0"
   }
 }
